# app/serializers/company_serializer.rb
@@ -1,0 +1,3 @@
+class CompanySerializer < ActiveModel::Serializer
+  attributes :id, :organization_id, :name, :country, :founded, :industry, :description, :number_of_employees, :website
+end
