# swagger/v1/swagger.yaml
@@ -4,11 +4,11 @@ info:
   title: API V1
   version: v1
 paths:
-  "/orders/{id}":
+  "/companies/{id}":
     get:
-      summary: Retrieves an order
+      summary: Retrieves an organization
       tags:
-      - Orders
+      - Organizations
       parameters:
       - name: id
         in: path
@@ -17,7 +17,7 @@ paths:
           type: integer
       responses:
         '200':
-          description: Order found
+          description: Organization found
           content:
             application/json:
               schema:
@@ -25,24 +25,23 @@ paths:
                 properties:
                   id:
                     type: integer
-                  customer:
+                  name:
                     type: string
-                  employee_id:
+                  organization_id:
+                    type: string
+                  website:
+                    type: string
+                  founded:
+                    type: string
+                    format: date
+                  number_of_employees:
                     type: integer
-                  order_date:
+                  industry:
                     type: string
-                    format: date
-                  required_date:
+                  description:
                     type: string
-                    format: date
-                  shipped_date:
+                  country:
                     type: string
-                    format: date
-                  shipped_id:
-                    type: integer
-                  freight:
-                    type: number
-                    format: float
                 required:
                 - id
                 - name
@@ -53,34 +52,33 @@ paths:
                 properties:
                   id:
                     type: integer
-                  customer:
+                  name:
                     type: string
-                  employee_id:
+                  organization_id:
+                    type: string
+                  website:
+                    type: string
+                  founded:
+                    type: string
+                    format: date
+                  number_of_employees:
                     type: integer
-                  order_date:
+                  industry:
                     type: string
-                    format: date
-                  required_date:
+                  description:
                     type: string
-                    format: date
-                  shipped_date:
+                  country:
                     type: string
-                    format: date
-                  shipped_id:
-                    type: integer
-                  freight:
-                    type: number
-                    format: float
                 required:
                 - id
                 - name
                 - status
         '404':
-          description: Order not found
+          description: Organization not found
     put:
-      summary: update an order
+      summary: update an organization
       tags:
-      - Orders
+      - Organizations
       parameters:
       - name: id
         in: path
@@ -89,7 +87,7 @@ paths:
           type: integer
       responses:
         '200':
-          description: Order updated
+          description: Organization updated
         '422':
           description: invalid request
         '401':
@@ -100,37 +98,33 @@ paths:
             schema:
               type: object
               properties:
-                customer:
+                name:
                   type: string
-                employee_id:
+                website:
+                  type: string
+                founded:
+                  type: string
+                  format: date
+                number_of_employees:
                   type: integer
-                order_date:
+                industry:
                   type: string
-                  format: date
-                required_date:
+                description:
                   type: string
-                  format: date
-                shipped_date:
+                country:
                   type: string
-                  format: date
-                shipped_id:
-                  type: integer
-                freight:
-                  type: number
-                  format: float
               required:
-              - id
-              - customer
-              - employee_id
-              - order_date
-              - required_date
-              - shipped_date
-              - shipped_id
-              - freight
+              - name
+              - website
+              - founded
+              - number_of_employees
+              - industry
+              - description
+              - country
     delete:
-      summary: delete an order
+      summary: delete an organization
       tags:
-      - Orders
+      - Organizations
       parameters:
       - name: id
         in: path
@@ -141,12 +135,12 @@ paths:
         '401':
           description: Unauthorised User
         '404':
-          description: Order record not found
-  "/orders":
+          description: Organization record not found
+  "/companies":
     get:
-      summary: Retrieves all orders
+      summary: Retrieves all organization
       tags:
-      - Orders
+      - Organizations
       responses:
         '200':
           description: OK
@@ -158,43 +152,43 @@ paths:
                   properties:
                     id:
                       type: integer
-                    customer:
+                    name:
                       type: string
-                    employee_id:
+                    organization_id:
+                      type: string
+                    website:
+                      type: string
+                    founded:
+                      type: string
+                      format: date
+                    number_of_employees:
                       type: integer
-                    order_date:
+                    industry:
                       type: string
-                      format: date
-                    required_date:
+                    description:
                       type: string
-                      format: date
-                    shipped_date:
+                    country:
                       type: string
-                      format: date
-                    shipped_id:
-                      type: integer
-                    freight:
-                      type: number
-                      format: float
                 required:
                 - id
-                - customer
-                - employee_id
-                - order_date
-                - required_date
-                - shipped_date
-                - shipped_id
-                - freight
+                - organization_id
+                - name
+                - website
+                - country
+                - founded
+                - industry
+                - description
+                - number_of_employees
         '422':
           description: invalid request
     post:
-      summary: Creates an order
+      summary: Creates an organization
       tags:
-      - Orders
+      - Organizations
       parameters: []
       responses:
         '201':
-          description: order created
+          description: organization created
         '422':
           description: invalid request
         '401':
@@ -205,35 +199,34 @@ paths:
             schema:
               type: object
               properties:
-                customer:
+                name:
                   type: string
-                employee_id:
+                organization_id:
+                  type: string
+                website:
+                  type: string
+                founded:
+                  type: string
+                  format: date
+                number_of_employees:
                   type: integer
-                order_date:
+                industry:
                   type: string
-                  format: date
-                required_date:
+                description:
                   type: string
-                  format: date
-                shipped_date:
+                country:
                   type: string
-                  format: date
-                shipped_id:
-                  type: integer
-                freight:
-                  type: number
-                  format: float
               required:
-              - id
-              - customer
-              - employee_id
-              - order_date
-              - required_date
-              - shipped_date
-              - shipped_id
-              - freight
+              - organization_id
+              - name
+              - website
+              - country
+              - founded
+              - industry
+              - description
+              - number_of_employees
 servers:
 - url: https://{defaultHost}
   variables:
     defaultHost:
-      default: orderapi99.fly.dev
+      default: organizationsapi.fly.dev
